k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myproductionapp
  namespace: myproductionapp
spec:
  selector:
    app: myproductionapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
