k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproductionapp-ingress
  namespace: myproductionapp
  annotations:
    kubernetes.io/ingress.class: alb
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: "<YOUR_APP_HOST>"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myproductionapp
                port:
                  number: 80
  tls:
    - hosts:
        - "<YOUR_APP_HOST>"
      secretName: myproductionapp-tls
